# librarian

./: Cargo.toml  README.md
librarian/: Cargo.toml
librarian/src/: corpus.rs  index.rs  main.rs
vault/: Cargo.toml
vault/src/: error.rs  lib.rs  manifest.rs  walk.rs
