[package]
name = "librarian"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
clap = { version = "4.4.11", features = ["derive"] }
flate2 = "1.0.28"
git2 = "0.18.1"
indicatif = { version = "0.17.7", features = ["rayon"] }
rayon = "1.8.0"
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tar = "0.4.40"
tempfile = "3.8.1"
thiserror = "1.0.50"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
vault = { version = "0.1.0", path = "../vault" }
walkdir = "2.4.0"
